<resources>
    <string name="app_name">Mex</string>


    <string name="entries_database" translatable="false">entries</string>

    <string name="title_home">Home</string>
    <string name="title_google_map">Maps</string>
    <string name="add_new_restaurant">Add new restaurant</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="take_photo">Take a new photo</string>
    <string name="sample_food_name">Noodle Soup</string>
    <string name="users_database">users</string>
    <string name="detail_image_cd">Entry Detail</string>
    <string name="detail_enter_name">Enter food name</string>
    <string name="detail_enter_price">Enter price</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_location">Select Location</string>
    <string name="add_location">Add Restaurant Location</string>
    <string name="add_venue_photo">Add Venue Photo</string>
    <string name="menu_item_delete">Delete</string>
    <string name="delete_entry_dialog_title">Delete entry</string>
    <string name="delete_entry_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="delete_venue_title">Delete venue</string>
    <string name="delete_venue_dialog_message">Are you sure you want to delete this venue? All entries under this venue will be deleted as well!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notifications">Enable notifications</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="logout">Log out</string>
    <string name="settings_logout_key">logout_key</string>
    <string name="location_required">This will require location access</string>
    <string name="settings_enable_notifications">settings_enable_notifications</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_edit">EDIT</string>
    <string name="menu_item_settings">Settings</string>
    <string name="geofencing_notification_channel_name">Mex</string>
    <string name="mex">My Experience</string>

    <string name="format_notification_small">
        Welcome back to %s.
    </string>
    <string name="format_notification_big">
        Open Mex to see what you had in %s last time.
    </string>
    <string name="filter_by">Filter by</string>
    <string name="min_rating">Minimum Rating</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_rating">Rating</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="sort_by_entry_date">Date</string>
    <string name="failed_to_download">Failed to download picture</string>
    <string name="send_to">Send to</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings_send_feedback_key">settings_send_feedback_key</string>
    <string name="feedback_email">tirgan.mex@gmail.com</string>
    <string name="feedback_email_subject">Mex feedback</string>
    <string name="shared_element_venue_image_view">shared_element_venue_image_view</string>
    <string name="shared_element_mex_entry_image_view">shared_element_mex_entry_image_view</string>
    <string name="appwidget_text">Mex</string>
    <string name="add_widget">Add widget</string>
    <string name="select_venue">Select a restaurant</string>
    <string name="sample_mex_entry_name">Sample Food</string>
    <string name="sample_mex_entry_price">$10</string>
    <string name="format_price">$%s</string>
    <string name="cd_sort_by">Sort by button</string>
    <string name="cd_venue_image">Venue image</string>
    <string name="cd_expand_button">Expand to see entries</string>
    <string name="cd_mex_image">Food image</string>
    <string name="cd_take_new_picture">Take a new picture</string>
    <string name="cd_selected_location_marker">Selected Location Marker</string>
    <string name="cd_add_new_venue">Add new Venue</string>
    <string name="cd_add_new_mex_entry">Add new entry</string>
    <string name="cd_add_new_venue_or_entry">Add new venue or entry</string>
    <string name="default_venue_initial">M</string>
    <string name="restaurant">Restaurant</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="first_add_venue">Add a restaurant first</string>
    <string name="sample_venue_name">Ben Tre</string>

    <string name="sample_venue_date_name">Feb 2, 2018 at Great Saigon</string>
    <string name="format_venue_date">%s at %s</string>
    <string name="detail_pick_venue">Pick a place</string>
    <string name="sample_rating_tv">4.5/5</string>
    <string name="format_rating_text_view">%s/5</string>
    <string name="sample_mex_entry_date">Feb 2nd 2018</string>
    <string name="detail_enter_comment">Enter Comment</string>
    <string name="sample_comment">I liked their coffee! A lot!</string>
    <string name="find_on_map">Find on Map</string>
    <string name="close">Close</string>
    <string name="loading_nearby_places">Loading nearby places</string>
    <string name="default_image_name_in_cache">image.png</string>
    <string name="default_image_folder_in_cache">images</string>
    <string name="no_internet_connection">No Internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
