<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <FrameLayout
        android:id="@+id/detail_fl"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/detail_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/detail_image_cd"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/noodle" />

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="12dp"
            android:background="@color/camera_image_button_background"
            android:contentDescription="@string/cd_take_new_picture"
            android:onClick="onAddNewPhotoMexEntry"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/camera" />

    </FrameLayout>

    <RatingBar
        android:id="@+id/detail_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_fl" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detail_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_rb">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/detail_enter_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detail_price_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_price_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="6"
            android:hint="@string/detail_enter_price"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/detail_venue_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_price_til" />

</android.support.constraint.ConstraintLayout>