<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_edit_iv"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            tools:src="@drawable/noodle" />

        <RatingBar
            android:id="@+id/detail_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/detail_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/detail_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/detail_enter_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/detail_price_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/detail_price_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/detail_enter_price"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/detail_pick_venue_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/detail_pick_venue_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="6"
                android:focusable="false"
                android:hint="@string/detail_pick_venue"
                android:inputType="text"
                android:onClick="onUpdateLocationClick" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>