<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RatingBar
        android:id="@+id/detail_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detail_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_rb">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/detail_enter_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detail_price_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_price_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="6"
            android:hint="@string/detail_enter_price"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/venue_spinner_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_price_til"
        />


    <RelativeLayout
        android:id="@+id/spinner_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_border"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/update_location_ib"
        app:layout_constraintStart_toEndOf="@+id/venue_spinner_tv"
        app:layout_constraintTop_toBottomOf="@+id/detail_price_til">

        <TextView
            android:id="@+id/mex_venue_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/update_location_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/map_marker_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_rl"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_rl"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/fui_transparent"
        android:onClick="onUpdateLocationClick"
        />


</android.support.constraint.ConstraintLayout>